--- a/Trang sản phẩm/product.html
+++ b/Trang sản phẩm/product.html
@@ -90,6 +90,7 @@
 
             <tbody id="new-product"></tbody>
           </table>
+          <div id="pagination"></div>
         </div>
       </div>
     </main>
