--- a/Trang Category/index.html
+++ b/Trang Category/index.html
@@ -15,7 +15,7 @@
           <p>Chào mừng bạn đã quay trở lại</p>
           <p>
             <i class="fa-solid fa-user"></i>
-            <strong>Nguyễn Minh</strong>
+            <span id="user-category"></span>
           </p>
         </div>
       </div>
@@ -89,7 +89,6 @@
               <td>
                 <button>Update</button>
                 <button>Delete</button> -->
-              </td>
             </tbody>
           </table>
         </div>
