--- a/Trang sản phẩm/product.html
+++ b/Trang sản phẩm/product.html
@@ -9,14 +9,14 @@
   <div class="ovelay" id="ovelay"></div>
   <body>
     <header>
-      <h2>Category</h2>
+      <h2>Product</h2>
       <div class="header">
         <p><i class="fa-solid fa-bars"></i></p>
         <div class="header-right">
           <p>Chào mừng bạn đã quay trở lại</p>
           <p>
             <i class="fa-solid fa-user"></i>
-            <strong>Nguyễn Minh</strong>
+            <span id="user-prodcuct"></span>
           </p>
         </div>
       </div>
