--- a/File Trang chủ/Home.html
+++ b/File Trang chủ/Home.html
@@ -18,16 +18,13 @@
     <header class="navbar">
       <div class="navbar-left">
         <a href="#"
-          ><img
-            src="./images/Running-store-logo_final_black_-180x60.png"
-            alt="RUNGNING-STORE"
-            width="100%"
+          ><img src="./images/IVYMODA.png" alt="RUNGNING-STORE" width="100%"
         /></a>
         <div class="navbar-left-input-total">
           <input
             class="navbar-left-input"
             type="text"
-            placeholder="TÌM KIẾM SẢN PHẨM"
+            placeholder="Tìm kiếm sản phẩm"
           />
           <button type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -156,13 +153,16 @@
       </ul>
       <div class="navbar-right">
         <a href="#"><i class="fa-regular fa-heart"></i></a>
+        <span class="total-heart" id="total-heart">0</span>
+
         <a
           href="http://127.0.0.1:5501/File%20%C4%90%C4%83ng%20nh%E1%BA%ADp/Login.html"
           ><i class="fa-solid fa-user"></i
         ></a>
         <span style="color: brown" id="user-name"></span>
-        <a href="#"><i id="cart" class="fa-solid fa-cart-shopping"></i></a>
-        <span class="total-qty">0</span>
+
+        <a href="#"><i id="cart" class="fa-solid fa-cart-shopping"></i> </a>
+        <span class="total-qty" id="total-qty">0</span>
       </div>
       <i id="logout" class="fa-solid fa-right-from-bracket"></i>
     </header>
@@ -324,7 +324,7 @@
 
         <div class="product-content">
           <div class="product">
-            <a href="#"
+            <a href="#" class="image-product"
               ><img
                 src="./images/image_product/product6.webp"
                 alt="product"
@@ -371,7 +371,7 @@
           </div>
         </div>
         <div class="link-product">
-          <a href="#" class="all-product">Xem tất cả</a>
+          <!-- <a href="#" class="all-product">Xem tất cả</a> -->
         </div>
       </div>
 
@@ -469,9 +469,6 @@
           <li><a href="">Liên hệ</a></li>
         </ul>
       </div>
-      <div class="footer-right">
-        <img src="./images/footer-right.png" alt="" width="100%" />
-      </div>
     </footer>
     <!-- //
      // -->
@@ -480,6 +477,6 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="Home.js"></script>
+    <script src="./Home.js"></script>
   </body>
 </html>
